[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
lib = { path = "../lib" }
bevy_renet = "0.0.9"
serde = "1.0.183"
bincode = "1.3.3"
smooth-bevy-cameras = "0.9.0"
bevy_mod_picking = { git = "https://github.com/bardt/bevy_mod_picking", branch = "bevy_0.11" }
bevycheck = "0.5.2"
